# langchain-agent

./: .env  .env.example  .gitignore  .replit  debug_email_step_by_step.py  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  simple_email_check.py  test_email_debug.py  test_mcp_tools.py  test_mcp_tools_working.py  vite.config.ts
attached_assets/: Pasted--from-imapclient-import-IMAPClient-import-email-import-time-import-json-import-os-IMAP-SERVE-1757572528165_1757572528166.txt  Pasted-Here-is-a-complete-detailed-and-robust-Python-script-for-a-real-time-email-agent-that-Ch-1757502395993_1757502395996.txt  Pasted-Yes-it-is-possible-to-display-incoming-emails-instantly-so-that-your-app-or-Python-script-reacts-th-1757478296538_1757478296629.txt
data/: email_20250910_101928_0f5f99c3.json  email_20250910_101928_397cc8cf.json  email_20250910_103517_58f46271.json  email_20250910_103521_b4ed1800.json  email_20250910_103522_57032aab.json  email_20250910_103522_7ee88fac.json  email_20250910_103523_16ba06cb.json  email_20250910_103523_35f26060.json  email_20250910_103524_5901e0d1.json  email_20250910_103524_e6e59361.json  email_20250910_103525_34c60bb7.json  email_20250910_103525_7b5cc2fc.json  email_20250910_103526_cc995c8d.json  email_20250910_103526_d7d20329.json  email_20250910_103527_d65d8c7b.json  email_20250910_103527_f75d6dfa.json  email_20250910_103528_3de463fb.json  email_20250910_103528_884bace3.json  email_20250910_103529_2f605779.json  email_20250910_103529_7c68d754.json  email_20250910_103530_77739050.json  (+115 more)
output/: report_1757933903.txt  (+17 more)
(+112 files in other folders)
