[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-adapters>=0.1.9",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "seaborn>=0.13.2",
    "mcp>=1.13.1",
    "fastmcp>=2.12.2",
    "lasio>=0.32",
    "requests>=2.32.5",
    "imapclient>=3.0.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
]
